--- a/app/globals.css
+++ b/app/globals.css
@@ -130,15 +130,23 @@ table {
 
 :root {
   --cyan: hsl(180, 66%, 49%);
+  --cyan-hover: hsl(180, 66%, 49%, .8);
   --dark-violet: hsl(257, 27%, 26%);
   --red: hsl(0, 87%, 67%);
   --gray: hsl(0, 0%, 75%);
   --grayish-violet: hsl(257, 7%, 63%);
   --dark-blue: hsl(255, 11%, 22%);
   --dark-violet: hsl(260, 8%, 14%);
+
+  --white: #fff;
+  --black: #000;
+
+  --hover-time: 300ms;
+  --hover-type: ease
 }
 
 html,
 body {
   font-family: "Poppins", sans-serif;
 }
+
