--- a/app/src/Hero/styles.module.css
+++ b/app/src/Hero/styles.module.css
@@ -1,32 +1,55 @@
 .hero {
-    display: flex;
-    flex-direction: column;
-    overflow: hidden;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  overflow: hidden;
+  padding: 1rem 0;
+  gap: 2.5rem;
 }
 
 .heroImage {
-    max-width: 150%;
-    overflow: hidden;
-    height: auto;
+  max-width: 150%;
+  overflow: hidden;
+  height: auto;
 }
 
 .heroTextContainer {
-    display: flex;
-    flex-direction: column;
-    gap: 1.5rem;
-    padding: 0 1.5rem;
-    text-align: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 1.5rem;
+  padding: 0 1.5rem;
+  text-align: center;
 }
 
 .heroTextContainer h1 {
-    font-size: 3rem;
-    font-weight: 700;
-    color: var(--dark-blue);
+  font-size: 3rem;
+  font-weight: 700;
+  color: var(--dark-blue);
 }
 
 .heroTextContainer p {
-    font-size: 1.25rem;
-    line-height: 1.5;
-    font-weight: 400;
-    color: var(--grayish-violet);
+  font-size: 1.25rem;
+  line-height: 1.5;
+  font-weight: 400;
+  color: var(--grayish-violet);
+}
+
+@media screen and (min-width: 992px) {
+  .hero {
+    flex-direction: row-reverse;
+    max-width: 1000px;
+    margin: auto;
+    padding: 3rem;
+  }
+
+  .heroTextContainer {
+    text-align: left;
+    align-items: flex-start;
+    max-width: 400px
+  }
+
+  .heroTextContainer p {
+    font-size: 1rem;
+  }
 }
