--- a/app/globals.css
+++ b/app/globals.css
@@ -133,13 +133,16 @@ table {
   --cyan-hover: hsl(180, 66%, 49%, .8);
   --dark-violet: hsl(257, 27%, 26%);
   --red: hsl(0, 87%, 67%);
-  --gray: hsl(0, 0%, 75%);
+  --gray: hsl(231, 28%, 95%);
   --grayish-violet: hsl(257, 7%, 63%);
   --dark-blue: hsl(255, 11%, 22%);
   --very-dark-violet: hsl(260, 8%, 14%);
 
   --white: #fff;
   --black: #000;
+
+  --section-heading: 2rem;
+  --body-text: 1.1rem;
 
   --hover-time: 300ms;
   --hover-type: ease
