card and card deck

--- a/app/src/CardDeck/Card/styles.module.css
+++ b/app/src/CardDeck/Card/styles.module.css
@@ -1,5 +1,74 @@
 .card {
-    background-color: var(--white);
-    border-radius: 6px;
-    padding: 2rem 1rem;
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 1.5rem;
+  background-color: var(--white);
+  border-radius: 6px;
+  padding: 6rem 2.5rem 2rem;
+  text-align: center;
+}
+
+.card:not(:nth-last-child(1))::after {
+  content: "";
+  width: 0.75rem;
+  height: 5rem;
+  position: absolute;
+  background-color: var(--cyan);
+  bottom: 0;
+  transform: translateY(100%);
+}
+
+.iconContainer {
+  position: absolute;
+  top: 0;
+  width: 6rem;
+  aspect-ratio: 1/ 1;
+  background-color: var(--dark-violet);
+  background-repeat: no-repeat;
+  background-position: center;
+  border-radius: 100%;
+  transform: translateY(-50%);
+}
+
+.card h3 {
+  font-size: 1.75rem;
+  font-weight: 700;
+  color: var(--dark-blue);
+}
+
+.card p {
+  font-size: var(--body-text);
+  color: var(--grayish-violet);
+  line-height: 1.5;
+}
+
+@media screen and (min-width: 992px) {
+  .card {
+    align-items: flex-start;
+    text-align: left;
+    height: fit-content;
+  }
+
+  .card:not(:nth-last-child(1))::after {
+    content: "";
+    height: 0.75rem;
+    width: 7rem;
+    bottom: 50%;
+    right: 0;
+    transform: translateX(100%);
+  }
+
+  .card:nth-of-type(2) {
+    margin-top: 2rem;
+  }
+
+  .card:nth-of-type(3) {
+    margin-top: 4rem;
+  }
+
+  .card h3 {
+    font-size: 1.25rem;
+  }
 }
