--- a/app/src/Hero/styles.module.css
+++ b/app/src/Hero/styles.module.css
@@ -38,7 +38,7 @@
 @media screen and (min-width: 992px) {
   .hero {
     flex-direction: row-reverse;
-    max-width: 1000px;
+    max-width: var(--desktop-max-width);
     margin: auto;
     padding: 3rem;
   }
