--- a/app/src/Footer/styles.module.css
+++ b/app/src/Footer/styles.module.css
@@ -12,7 +12,7 @@
 }
 
 .footerLogo {
-  margin: auto;
+  margin: 0 auto;
 }
 
 .footerNav {
@@ -56,5 +56,25 @@
   gap: 2rem;
 }
 
+.footerIconContainer img:hover {
+  cursor: pointer;
+}
+
 @media screen and (min-width: 992px) {
+  .footerContainer {
+    grid-template-columns: 0.75fr 1.25fr 1fr;
+  }
+
+  .footerNav {
+    flex-direction: row;
+    text-align: left;
+  }
+
+  .footerLogo {
+    margin: 0;
+  }
+
+  .footerIconContainer {
+    justify-content: flex-start;
+  }
 }
