--- a/app/src/CardDeck/UrlCard Deck/UrlCard.module.css
+++ b/app/src/CardDeck/UrlCard Deck/UrlCard.module.css
@@ -1,19 +1,32 @@
 .urlCard {
-    display: flex;
-    flex-direction: column;
-    gap: 1rem;
-    padding: 1rem;
-    background-color: var(--white);
-    border-radius: 6px;;
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+  padding: 1rem;
+  background-color: var(--white);
+  border-radius: 6px;
 }
 
 .urlLong {
-    color: var(--dark-blue);
-    border-bottom: 1px solid var(--gray);
-    padding-bottom: 1rem;
+  color: var(--dark-blue);
+  border-bottom: 1px solid var(--gray);
+  padding-bottom: 1rem;
 }
 
 .urlShort {
-    color: var(--cyan);
-    font-weight: 600;
+  color: var(--cyan);
+  font-weight: 600;
+}
+
+@media screen and (min-width: 992px) {
+  .urlCard {
+    display: grid;
+    grid-template-columns: 1fr max-content max-content;
+    align-items: center;
+  }
+
+  .urlLong {
+    border-bottom: none;
+    padding-bottom: 0;
+  }
 }
