--- a/app/src/ConversionPanel/styles.module.css
+++ b/app/src/ConversionPanel/styles.module.css
@@ -1,6 +1,8 @@
 .conversionPanel {
     background-color: var(--dark-violet);
     background-image: url(../../../public/images/bg-boost-desktop.svg);
+    background-repeat: no-repeat;
+    background-size: cover;
     display: flex;
     flex-direction: column;
     align-items: center;
